productions/veadk/archives/1.0.0/en/components/frontend/index.mdx
---
title: "Overview"
zh_link: "/productions/veadk/archives/1.0.0/zh/components/frontend"
---

VeADK ships two frontends: **VeADK Web** for local debugging, and **VeADK Frontend**, a production-grade, enterprise agent-application frontend.

## VeADK Web and VeADK Frontend

**VeADK Web** is a visual debugging UI inherited from Google ADK Web — chat with your agent and inspect execution in the browser with zero frontend code, ideal for local development and troubleshooting; see [VeADK Web](/productions/veadk/archives/1.0.0/en/components/frontend/veadk-web).

**VeADK Frontend** is a customizable, production-grade React app and enterprise agent workbench. It creates runnable VeADK projects through conversational, custom, or template flows; the workflow entry is marked as coming soon and cannot be selected. It also supports chatting with and debugging agents, browsing the skill center, connecting remote AgentKit agents, running full-text and web search, inspecting call traces, and signing in. It talks to the same process `veadk frontend` launches, so there is no separate backend to deploy; for the command and build instructions, see [VeADK Frontend](/productions/veadk/archives/1.0.0/en/components/frontend/veadk-frontend).

## A2UI

[A2UI](/productions/veadk/archives/1.0.0/en/components/frontend/a2ui) is one of VeADK Frontend's capabilities — the rich-UI rendering layer: it lets an agent return cards, forms, and row/column layouts in a conversation instead of plain text only, rendered natively by the frontend. Enable it by setting `enable_a2ui=True` when creating the agent, and extend the built-in set with your own enterprise components.
